--- a/workspace/ims-client/src/app/buckwaframework/common/components/condition/condition.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/common/components/condition/condition.component.html
@@ -18,7 +18,8 @@
         <tr *ngFor="let data of datas; let i=index">
           <td class="aligned center">{{i+1}}</td>
           <td class="aligned center">
-            <select class="ui dropdown ai" id="condition{{i}}" name="condition{{i}}" [attr.required]="true" [(ngModel)]="datas[i].condition" (change)="changeCondution(i)">
+            <select class="ui dropdown ai" id="condition{{i}}" name="condition{{i}}" [attr.required]="true" [(ngModel)]="datas[i].condition"
+              (change)="changeCondution(i)">
               <option value="<>">ระหว่าง</option>
               <option value=">">มากกว่า</option>
               <option value="<">น้อยกว่า</option>
@@ -32,7 +33,8 @@
           <td class="aligned center">{{ datas[i].condition ? datas[i].condition : '...' }}</td>
           <td class="aligned center">
             <div class="ui input">
-              <input type="number" name="value2{{i}}" [(ngModel)]="datas[i].value2" id="value2{{i}}" required>
+
+              <input type="number" name="value2{{i}}" [(ngModel)]="datas[i].value2" id="value2{{i}}" required="{{ datas[i].condition == '<>' }}">
             </div>
           </td>
 
