--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -62,6 +62,9 @@
         </div>
 
         <div class="ui segment">
+            <div class="ui active inverted dimmer" *ngIf="loading">
+                <div class="ui text loader">Loading</div>
+            </div>
             <div class="ui grid">
                 <div class="two wide column"></div>
                 <div class="seven wide column">
@@ -106,65 +109,66 @@
                         </div>
                         <div class="item">
                             <div class="menu">
-                                <a class="item" (click)="sendLineUserValues()" routerLink="/add-external-data/send-line-user">- กดส่งรายให้ภาคพื้นที่</a>
+                                <a class="item" (click)="sendLineUserValues()" routerLink="/add-external-data/send-line-user">-
+                                    กดส่งรายให้ภาคพื้นที่</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="thirteen wide column">
-                    <div style="overflow-x: scroll;overflow-y: hidden;padding-bottom: 14px;">
-                        <table id="userManagementDt" class="ui small celled table aligned hover" style="width: 5000px;">
+                    <div style="padding-bottom: 14px;">
+                        <table id="userManagementDt" class="ui small celled table aligned nowrap hover" style="width: 100%;">
                             <thead id="trDrinamic">
-                                <tr>
-                                    <th rowspan="2" style="text-align: center !important">ลำดับ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อผู้ประกอบการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">พื้นที่</th>
-                                    <th colspan="2" style="text-align: center !important">การชำระภาษีในสภาวะปกติ (บาท)</th>
-                                    <th rowspan="2" style="text-align: center !important">เปลี่ยนแปลง (ร้อยละ)</th>
-                                    <th rowspan="2" style="text-align: center !important">ชำระภาษี(เดือน)</th>
-                                    <th colspan="3" style="text-align: center !important">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
-                                    <th rowspan="2" style="text-align: center !important">ภาค</th>
-                                    <th rowspan="2" style="text-align: center !important">พิกัด</th>
-                                    <th rowspan="2" style="text-align: center !important">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
-                                    <th rowspan="2" style="text-align: center !important">ทุนจดทะเบียน</th>
-                                    <th rowspan="2" style="text-align: center !important">สถานะ/วันที่</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนแรก</th>
-                                    <th colspan="12" style="text-align: center !important">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
-                                    <th rowspan="2" style="text-align: center !important">เพิ่มข้อมูลภายนอก</th>
+                                <tr style="text-align: center !important">
+                                    <th rowspan="2">ลำดับ</th>
+                                    <th rowspan="2">ทะเบียนสรรพสามิต เดิม/ใหม่</th>
+                                    <th rowspan="2">ชื่อผู้ประกอบการ</th>
+                                    <th rowspan="2">ชื่อโรงอุตสาหกรรม/สถานบริการ</th>
+                                    <th rowspan="2">พื้นที่</th>
+                                    <th colspan="2">การชำระภาษีในสภาวะปกติ (บาท)</th>
+                                    <th rowspan="2">เปลี่ยนแปลง (ร้อยละ)</th>
+                                    <th rowspan="2">ชำระภาษี(เดือน)</th>
+                                    <th colspan="3">การตรวจสอบภาษีย้อนหลัง 3 ปีงบประมาณ</th>
+                                    <th rowspan="2">ภาค</th>
+                                    <th rowspan="2">พิกัด</th>
+                                    <th rowspan="2">ที่อยู่โรงอุตสาหกรรม/สถานบริการ</th>
+                                    <th rowspan="2">ทุนจดทะเบียน</th>
+                                    <th rowspan="2">สถานะ/วันที่</th>
+                                    <th colspan="12">การชำระภาษี {{ month/2 }} เดือนแรก</th>
+                                    <th colspan="12">การชำระภาษี {{ month/2 }} เดือนหลัง </th>
+                                    <th rowspan="2">เพิ่มข้อมูลภายนอก</th>
                                 </tr>
-                                <tr>
+                                <tr style="text-align: center !important">
                                     <th style="border-left: 1px solid rgba(34,36,38,.1);">{{ month/2 }} เดือนแรก</th>
-                                    <th style="text-align: center !important">{{ month/2 }} เดือนหลัง </th>
-                                    <th style="text-align: center !important">2558</th>
-                                    <th style="text-align: center !important">2559</th>
-                                    <th style="text-align: center !important">2560</th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
-                                    <th style="text-align: center !important">พ.ค. 58</th>
-                                    <th style="text-align: center !important">มิ.ย. 58</th>
-                                    <th style="text-align: center !important">ก.ค. 58</th>
-                                    <th style="text-align: center !important">ส.ค. 58</th>
-                                    <th style="text-align: center !important">ก.ย. 58</th>
-                                    <th style="text-align: center !important">ต.ค. 58</th>
-                                    <th style="text-align: center !important">พ.ย. 58</th>
-                                    <th style="text-align: center !important">ธ.ค. 58</th>
-                                    <th style="text-align: center !important">ม.ค. 59</th>
-                                    <th style="text-align: center !important">ก.พ. 59</th>
-                                    <th style="text-align: center !important">มี.ค. 59</th>
-                                    <th style="text-align: center !important">เม.ย. 59 </th>
+                                    <th>{{ month/2 }} เดือนหลัง </th>
+                                    <th>2558</th>
+                                    <th>2559</th>
+                                    <th>2560</th>
+                                    <th>พ.ค. 58</th>
+                                    <th>มิ.ย. 58</th>
+                                    <th>ก.ค. 58</th>
+                                    <th>ส.ค. 58</th>
+                                    <th>ก.ย. 58</th>
+                                    <th>ต.ค. 58</th>
+                                    <th>พ.ย. 58</th>
+                                    <th>ธ.ค. 58</th>
+                                    <th>ม.ค. 59</th>
+                                    <th>ก.พ. 59</th>
+                                    <th>มี.ค. 59</th>
+                                    <th>เม.ย. 59 </th>
+                                    <th>พ.ค. 58</th>
+                                    <th>มิ.ย. 58</th>
+                                    <th>ก.ค. 58</th>
+                                    <th>ส.ค. 58</th>
+                                    <th>ก.ย. 58</th>
+                                    <th>ต.ค. 58</th>
+                                    <th>พ.ย. 58</th>
+                                    <th>ธ.ค. 58</th>
+                                    <th>ม.ค. 59</th>
+                                    <th>ก.พ. 59</th>
+                                    <th>มี.ค. 59</th>
+                                    <th>เม.ย. 59 </th>
                                 </tr>
                             </thead>
                             <tbody id="tbodyDrinamic">
