--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -117,7 +117,7 @@
                 </div>
 
                 <div class="thirteen wide column">
-                    <div style="padding-bottom: 14px;">
+                    <div class="{{ loading ? 'hidden' : '' }}" style="padding-bottom: 14px;">
                         <table id="userManagementDt" class="ui small celled table aligned nowrap hover" style="width: 100%;">
                             <thead id="trDrinamic">
                                 <tr style="text-align: center !important">
