--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.css
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-1/int02-1.component.css
@@ -1,3 +1,22 @@
 .full {
     width: 100% !important;
 }
+
+.ui.calendar, input[type=calendar] {
+    width: 100% !important;
+}
+
+label {
+    width: 100% !important;
+    text-align: right;
+}
+
+.text-left {
+    text-align: left !important;
+}
+.text-center {
+    text-align: center !important;
+}
+.text-right {
+    text-align: right !important;
+}
