--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int08/int08-3/int08-3-5/int08-3-5.component.html
@@ -1,442 +1,106 @@
 <div class="ui grid">
   <div class="sixteen wide column">
-
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>ประเมินควบคุมภายใน </span>
+      <span>รายละเอียดหัวกระดาษทำการ</span>
     </div>
-
-
     <div class="ui attached segment">
       <div class="ui form">
+
         <div class="inline fields">
-          <div class="five wide field "></div>
-          <div class="five wide field ">
-            <input type="file" />
+          <div class="two wide field "></div>
+          <div class="two wide field">
+            <label>ปีงบประมาณ</label>
           </div>
-          <button class="ui mini primary button">
-            ตัวอย่างแบบฟอร์มนำเข้าระบบ
-          </button>
+          <div class="ten wide field ">
+            <input type="text" placeholder="ปีงบประมาณ" class="custom" name="budgetYear" id="budgetYear" [(ngModel)]="budgetYear" disabled="disabled"
+              readonly>
+          </div>
+
         </div>
       </div>
 
-      <div class="ui center aligned grid">
-        <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="uploadData()">
-            <i class="upload icon"></i>
-            อัพโหลด
-          </button>
-          <button class="ui mini button" (click)="clearData()">
-            <i class="refresh icon"></i>
-            ล้างข้อมูล
-          </button>
+
+      <table id="dataTable" class="ui small celled table">
+        <thead id="trColumn">
+        </thead>
+        <tbody id="tbody">
+        </tbody>
+      </table>
+
+      <BR/>
+      <div class="inline fields latest-inline">
+        <div class="sixteen wide field">
+          <div class="ui center aligned grid btn">
+            <button class="ui mini primary button" (click)="saveRiskAssRiskWsDtl()">
+              <i class="save icon"></i>
+              บันทึก
+            </button>
+            <button class="ui mini primary button" (click)="modalConditionRL()">
+              กำหนดเงื่อนไข RL
+            </button>
+            <button class="ui mini primary button" (click)="modalpercent()">
+              กำหนดค่า %
+            </button>
+            <button class="ui mini primary button" (click)="addRiskAssRiskWsHdr()">
+              Export
+            </button>
+            <button class="ui mini primary button" (click)="cancelFlow()">
+              ยกเลิก
+            </button>
+          </div>
+
         </div>
       </div>
-
+      <BR/>
     </div>
+    <BR/>
+    <div class="sixteen wide column" *ngIf="getConditionShow()">
+      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>กำหนดเงื่อนไข RL ปัจจัยเสี่ยงอื่นๆ</span>
+      </div>
 
-    <div class="ui segment" *ngIf="showData">
-      <div class="ui right aligned grid">
-        <div class="sixteen wide column">
-          <button class="ui mini primary button" (click)="popupEditData()">
-            <i class="setting icon"></i>
-            กำหนด RL
-          </button>
-          <button class="ui mini primary button">
-            <i class=" save icon"></i>
-            บันทึก
-          </button>
-          <button class="ui mini primary button">
-            <i class="print icon"></i>
-            พิมพ์
-          </button>
-          <div class="ui mini primary button">
-            <div class="ui simple dropdown item">
-              ส่งออก
-              <i class="dropdown icon"></i>
-              <div class="menu">
-                <div class="item">PDF</div>
-                <div class="item">Excel</div>
-              </div>
+      <div class="ui attached segment">
+        <div class="ui form">
+          <condition [riskId]="budgetYear" [riskType]="'ALL'" [page]="'int08-3-5'" (out)="closeConditionRL($event)"></condition>
+        </div>
+        <br/>
+
+      </div>
+    </div>
+    <BR/>
+    <div class="sixteen wide column" *ngIf="getpercent()">
+      <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
+        <span>กำหนดค่าน้ำหนัก (%) สำนักงานสรรพสามิตภาคพื้นที่</span>
+      </div>
+
+      <div class="ui attached segment">
+        <div class="ui form">
+          <div class="inline fields" *ngFor="let risk of riskAssRiskWsHdrList; index as i;">
+            <div class="two wide field "></div>
+            <div class="six wide field">
+              <label>{{risk.riskHdrName}}</label>
+            </div>
+            <div class="two wide field">
+              <input type="number" placeholder="น้ำหนักของ{{risk.riskHdrName}}" class="custom" [(ngModel)]="risk.percent">&nbsp;&nbsp;%
             </div>
           </div>
         </div>
-      </div>
-      <br>
-      <div class="ui grid center aligned">
-        <div class="sixteen wide column">
-          กระดาษทำการประเมินความเสี่ยงระบบการควบคุมภายในเพื่อพิจารณาคัดเลือกหน่วยงานรับตรวจสำนักงานสรรพสามิตภาค พื้นที่ และสาขา
-          <br> ปีงบประมาณ พ.ศ. 2561
-          <br> กลุ่มตรวจสอบภายใน กรมสรรพสามิต
+        <br/>
+        <div class="inline fields latest-inline">
+          <div class="sixteen wide field">
+            <div class="ui center aligned grid btn">
+              <button class="ui mini primary button" (click)="savePercent()">
+                <i class="save icon"></i>
+                บันทึก
+              </button>
+              <button class="ui mini primary button" (click)="closepercent()">
+                ยกเลิก
+              </button>
+            </div>
+
+          </div>
         </div>
-      </div>
-
-      <div class="ui nine column grid">
-        <div class="column">
-          ปัจจัยเสี่ยง:
-        </div>
-
-        <div class="column" style="width: 16%;">
-          8.ระบบการควบคุมภายใน
-        </div>
-
-        <div class="column" style="width: 15%; margin-left: -8%;">
-          &nbsp;
-          <br> ตำแหน่งว่าง
-          <br> ตำแหน่งว่าง
-          <br> ตำแหน่งว่าง
-        </div>
-
-        <div class="column" style="width: 11%;">
-          &nbsp;
-          <br> เท่ากับ
-          <br> อยู่ระหว่าง
-          <br> อยู่ระหว่าง
-        </div>
-
-        <div class="column right aligned" style="width: 6%;">
-          &nbsp;
-          <br> 0
-          <br> 1 - 2
-          <br>
-          <span style="margin-right: 6%">3 - 4</span>
-        </div>
-
-        <div class="column" style="width: 12%;">
-          &nbsp;
-          <br> กำหนดค่าเป็น
-          <br> กำหนดค่าเป็น
-          <br> กำหนดค่าเป็น
-        </div>
-
-        <div class="column" style="width: 6%;">
-          &nbsp;
-          <br> 1
-          <br> 2
-          <br> 3
-        </div>
-
-        <div class="column" style="width: 12%;">
-          &nbsp;
-          <br> กำหนดค่าเป็น
-          <br> กำหนดค่าเป็น
-          <br> กำหนดค่าเป็น
-        </div>
-
-        <div class="column" style="width: 5%;">
-          &nbsp;
-          <br> ต่ำ
-          <br> กลาง
-          <br> สูง
-        </div>
-      </div>
-      <br>
-      <table id="tableData" class="ui small celled table">
-        <thead>
-          <tr style="text-align: center;">
-            <th rowspan="2">ลำดับ</th>
-            <th rowspan="2">หน่วยงาน</th>
-            <th colspan="3">ข้อมูลตำแหน่งว่าง</th>
-            <th rowspan="2">รวม</th>
-            <th colspan="2">ความเสี่ยง</th>
-          </tr>
-          <tr style="text-align: center;">
-            <th style="border-left: 1px solid rgba(34,36,38,.1); width:8%;">มีครบทุกตำแหน่ง</th>
-            <th style="width:8%;">ว่าง 1-2</th>
-            <th style="width:8%;">ว่าง 3-4</th>
-            <th style="width:8%;">RL</th>
-            <th style="width:8%;">แปลค่า</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>สสพ.แม่ฮ่องสอน</td>
-            <td>0</td>
-            <td>0</td>
-            <td>3</td>
-            <td>3</td>
-            <td class="bg-red">3</td>
-            <td class="bg-red">สูง</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>สสพ.ตราด</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>สส.พท.นครราชสีมา</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>สส.พท.บุรีรัมย์</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>สส.พท.อำนาจเจริญ</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>สสพ.นครพนม</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>สส.พท.ยโสธร</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>สสพ.ลำปาง</td>
-            <td>0</td>
-            <td>2</td>
-            <td>0</td>
-            <td>2</td>
-            <td class="bg-yellow">2</td>
-            <td class="bg-yellow">กลาง</td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>สสพ. ปทุมธานี 1</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>10</td>
-            <td>สสพ. ปทุมธานี 2</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>11</td>
-            <td>สสพ. สระบุรี</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>12</td>
-            <td>สสพ. พระนครศรีอยุธยา 2</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>13</td>
-            <td>สสพ.จันทบุรี</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>14</td>
-            <td>สสพ.ฉะเชิงเทรา</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-          <tr>
-            <td>15</td>
-            <td>สสพ.ชลบุรี 2*</td>
-            <td>1</td>
-            <td>0</td>
-            <td>0</td>
-            <td>1</td>
-            <td class="bg-green">1</td>
-            <td class="bg-green">ต่ำ</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-    <br>
-
-
-  </div>
-</div>
-
-<div id="modalInt0835" class="ui modal hidden transition">
-  <i class="close icon"></i>
-  <div class="header">
-    กำหนดเงื่อนไข RL และแปลงค่าประเมินความเสี่ยงระบบควบคุมภายใน </div>
-
-  <div class="content">
-    <div class="ui form">
-      <div class="inline fields">
-        <div class="sixteen wide field">
-
-        </div>
-      </div>
-
-      <table id="tableSetting" class="ui small celled table" style="width: 100%;">
-        <thead>
-          <tr class="center aligned">
-            <th>เงื่อนไขที่</th>
-            <th>เงื่อนไข</th>
-            <th>ค่าที่ 1</th>
-            <th>ถึง</th>
-            <th>ค่าที่ 2</th>
-            <th>ค่า RL</th>
-            <th>แปลงค่า</th>
-            <th>สี</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>
-              <select id="selectCondition1" class="ui dropdown ai">
-                <option value="0">Equal</option>
-                <option value="1">Between</option>
-                <option value="1">Not Equal</option>
-              </select>
-            </td>
-            <td>4</td>
-            <td>ถึง</td>
-            <td></td>
-            <td>1</td>
-            <td>ต่ำ</td>
-            <td>
-              <select id="selectColor1" class="ui dropdown ai">
-                <option value="0">เขียว</option>
-                <option value="1">เหลือง</option>
-                <option value="1">แดง</option>
-              </select>
-            </td>
-            <td>
-              <a href="javascript:;">
-                ลบ
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>
-              <select id="selectCondition2" class="ui dropdown ai">
-                <option value="0">Between</option>
-                <option value="1">Equal</option>
-                <option value="1">Not Equal</option>
-              </select>
-            </td>
-            <td>1</td>
-            <td>ถึง</td>
-            <td>2</td>
-            <td>2</td>
-            <td>กลาง</td>
-            <td>
-              <select id="selectColor2" class="ui dropdown ai">
-                <option value="0">เหลือง</option>
-                <option value="1">เขียว</option>
-                <option value="1">แดง</option>
-              </select>
-            </td>
-            <td>
-              <a href="javascript:;">
-                ลบ
-              </a>
-            </td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>
-              <select id="selectCondition3" class="ui dropdown ai">
-                <option value="0">Between</option>
-                <option value="1">Equal</option>
-                <option value="1">Not Equal</option>
-              </select>
-            </td>
-            <td>3</td>
-            <td>ถึง</td>
-            <td>4</td>
-            <td>3</td>
-            <td>สูง</td>
-            <td>
-              <select id="selectColor3" class="ui dropdown ai">
-                <option value="0">แดง</option>
-                <option value="1">เหลือง</option>
-                <option value="1">เขียว</option>
-              </select>
-            </td>
-            <td>
-              <a href="javascript:;">
-                ลบ
-              </a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-    </div>
-  </div>
-
-  <div class="actions">
-    <div class="ui center aligned grid">
-      <div class="sixteen wide column">
-        <button class="ui mini primary button">
-          <i class="add icon"></i>
-          เพิ่ม
-        </button>
-        <button class="ui mini primary button width-100">
-          <i class="save icon"></i>
-          บันทึก
-        </button>
-        <button class="ui mini button width-100" (click)="closePopupEdit()">
-          <i class="close icon"></i>
-          ปิด
-        </button>
+        <BR/>
       </div>
     </div>
   </div>
