--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
@@ -81,7 +81,7 @@
             <label>ข้อย่อย[{{ i+1 }}]</label>
           </div>
           <div class="eleven wide field">
-            <input class="custom" type="text" id="minorDetail{{i}}" name="minorDetail{{i}}" [(ngModel)]="minorDetail[i]" [attr.required]="true">
+            <input class="custom" type="text" id="minorDetail{{i}}" name="minorDetail{{i}}" [attr.required]="true">
           </div>
           <div class="one wide field">
             <a (click)="onDelField(i)" style="cursor: pointer;color: red">
