--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-m2/int02-m2.component.html
@@ -1,69 +1,16 @@
 <div class="ui centered grid">
-    <div class="row">
+
+    <div class="row" *ngIf="loading">
         <div class="column">
-            <div class="ui raised segments">
-                <div class="ui center aligned segment">
-                    <h4>แบบสอบทานระบบการควบคุมภายใน</h4>
-                </div>
-                <div class="ui centered segment grid">
-                    <form class="ui twelve wide form column" (ngSubmit)="onSubmit(f)" #f="ngForm">
-                        <div class="inline fields">
-                            <div class="three wide field">
-                                <label>สรรพสามิตภาค</label>
-                            </div>
-                            <div class="five wide field {{ checkValid('sector', f) ? 'error' : ''  }} ">
-                                <div class="ui input">
-                                    <select class="ui selection dropdown ai" name="sector" (change)="onSectorChange($event)" required ngModel>
-                                        <option value="">เลือกภาค</option>
-                                        <option value="{{sector.value1}}" *ngFor="let sector of sectors">{{sector.value1}}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="three wide field">
-                                <label>ผู้สอบทาน</label>
-                            </div>
-                            <div class="five wide field">
-                                <div class="ui input">
-                                    <input type="text" name="checker" placeholder="ผู้สอบทาน">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="inline fields">
-                            <div class="three wide field">
-                                <label>สรรพสามิตพื้นที่</label>
-                            </div>
-                            <div class="five wide field {{ checkValid('locate', f) ? 'error' : '' }} ">
-                                <div class="ui input">
-                                    <select class="ui selection dropdown ai" name="locate" required ngModel>
-                                        <option value="">เลือกพื้นที่</option>
-                                        <option value="{{locate.subTypeDescription}}" *ngFor="let locate of locates">{{locate.subTypeDescription}}</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="three wide field">
-                                <label>วันที่</label>
-                            </div>
-                            <div class="five wide field {{ checkValid('calendar_data', f) ? 'error' : '' }}">
-                                <div class="ui input">
-                                    <div class="ui calendar" id="calendar">
-                                        <div class="ui input {{ checkValid('calendar_data', f) ? 'error' : ''  }}">
-                                            <input type="calendar" readonly="" placeholder="ปี" id="calendar_data" name="calendar_data" autocomplete="off" required ngModel>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="ui centered grid inline field">
-                            <div class="two wide column">
-                                <button class="ui mini button primary" type="submit">ค้นหา</button>
-                            </div>
-                        </div>
-                    </form>
+            <div class="ui segment loading">
+                <div class="ui active inverted dimmer">
+                    <div class="ui text loader">กำลังโหลด</div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="row">
+
+    <div class="row" *ngIf="!loading">
         <form class="column" *ngIf="questionnaire.length > 0" (submit)="save($event)" ngNativeValidate>
             <div class="ui styled fluid accordion" id="acc">
                 <div *ngFor="let qtn of questionnaire; let i = index">
@@ -93,14 +40,14 @@
                                     <td *ngIf="detail.detailId">{{detail.content}}</td>
                                     <td *ngIf="detail.detailId" class="text-center">
                                         <div class="ui checkbox">
-                                            <input type="radio" name="chk{{i+1}}{{j+1}}" [(ngModel)]="questionnaire[i].detail[j].point" value="yes" id="chk{{i+1}}{{j+1}}"
+                                            <input type="radio" name="point{{i+1}}{{j+1}}" [(ngModel)]="questionnaire[i].detail[j].point" value="yes" id="chk{{i+1}}{{j+1}}"
                                                 required>
                                             <label></label>
                                         </div>
                                     </td>
                                     <td *ngIf="detail.detailId" class="text-center">
                                         <div class="ui checkbox">
-                                            <input type="radio" name="chk{{i+1}}{{j+1}}" [(ngModel)]="questionnaire[i].detail[j].point" value="no" id="chk{{i+1}}{{j+1}}"
+                                            <input type="radio" name="point{{i+1}}{{j+1}}" [(ngModel)]="questionnaire[i].detail[j].point" value="no" id="chk{{i+1}}{{j+1}}"
                                                 required>
                                             <label></label>
                                         </div>
